<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="298dp"
        android:layout_height="314dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/myphoto"
        android:src="@drawable/photograph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/name_text"
        style="@style/WhiteBox"
        android:layout_width="@dimen/text_box_width"
        android:layout_height="@dimen/text_box_heigh"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto"
        android:text="@string/name_text_content"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/nick_name_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/nick_name_text"
        style="@style/WhiteBox"
        android:layout_width="@dimen/text_box_width"
        android:layout_height="@dimen/text_box_heigh"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/nick_name_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/name_text"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/name_text_Nick"
        style="@style/BlackBox"
        android:layout_width="@dimen/text_box_width"
        android:layout_height="@dimen/text_box_heigh"
        android:layout_marginTop="16dp"
        android:text="@string/ncme_text_content_real"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/nickname_text_Nick"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/nickname_text_Nick"
        style="@style/BlackBox"
        android:layout_width="@dimen/text_box_width"
        android:layout_height="@dimen/text_box_heigh"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nickname_text_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/name_text_Nick"
        app:layout_constraintTop_toBottomOf="@+id/nick_name_text" />

    <TextView
        android:id="@+id/aboutme_text"
        style="@style/WhiteBox"
        android:layout_width="@dimen/text_box_width_long"
        android:layout_height="@dimen/text_box_heigh"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto"
        android:text="@string/aboutme_text_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_Nick" />

    <TextView
        android:id="@+id/aboutme_text_descript"
        style="@style/BlackBox"
        android:layout_width="@dimen/text_box_width_long"
        android:layout_height="@dimen/text_box_heigh_long"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/aboutme_text_descript_content"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutme_text" />

</androidx.constraintlayout.widget.ConstraintLayout>